# wasm-compiler

./: .gitignore  CMakeLists.txt  Dockerfile_env  README.md  ubuntu_install.md
contract/: .gitignore
contract/cosiolib/: CMakeLists.txt  assert.hpp  contract.hpp  datastream.hpp  dummy_system.c  main.cpp  print.hpp  serialize.hpp  singleton.hpp  storage.hpp  system.h  system.hpp  table.hpp  types.hpp
contract/coslib/: CMakeLists.txt  datastream.hpp  main.cpp  system.h  types.hpp
contract/hello/: hello.abi  hello.cpp
contracts/copyright/: README.md  copyright.cpp
contracts/cosiolib/: CMakeLists.txt  assert.hpp  contract.hpp  cosiolib.cpp  datastream.hpp  memory.h  name.hpp  print.hpp  serialize.hpp  singleton.hpp  storage.hpp  system.h  system.hpp  table.hpp  types.hpp  varint.hpp
contracts/cosnft/: README.md  cosnft.cpp
contracts/cossbt/: README.md  cossbt.cpp
contracts/duel/: duel.cpp
contracts/freeze/: README.md  freeze.cpp
contracts/hello/: hello.abi  hello.cpp
contracts/hello2/: hello.cpp
contracts/hello_i18n/: hello.cpp  i18n.hpp
contracts/musl/: CMakeLists.txt
contracts/odd_or_even/: odd_or_even.cpp
contracts/proposal/: README.md  proposal.cpp
contracts/repmgt/: README.md  repmgt.cpp
contracts/test/: test.abi  test.cpp
contracts/token/: token.cpp
contracts/token_reader/: token_reader.cpp
contracts/true_or_false/: game.cpp
contracts/unique_token/: README.md  unique_token.cpp
libraries/abi_generator/: CMakeLists.txt  abi_generator.cpp  (+1 more)
programs/: CMakeLists.txt  cosiocc.in
programs/cosio-abigen/: CMakeLists.txt  main.cpp
(+11 files in other folders)
